--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
     padding: 0;
 }
 
+body{
+    background-color: rgb(37, 37, 37);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
