--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 body{
@@ -11,13 +12,26 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
 #gameboard{
     width: 300px;
     height: 300px;
+    display: flex;
     flex-wrap: wrap;
     border: 1px solid crimson;
     margin-bottom: 20px;
     border-radius: 5px;
+    
+}
+
+.cell{
+    width: 100px;
+    height: 100px;
+    border: 1px solid crimson;
+    box-sizing: border-box;
+    display: flex;
+    justify-content:center ;
+    align-items: center;
 }
