--- a/style.css
+++ b/style.css
@@ -43,3 +43,37 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
+
+.circle{
+    width: 30px;
+    height: 30px;
+    border: 10px solid crimson;
+    border-radius: 50%;
+}
+
+.cross{
+    width: 50px;
+    height: 50px;
+    position: relative;
+    transform: rotate(45deg);
+}
+
+.cross:before , .cross:after{
+    content: "";
+    position: absolute;
+    background-color: crimson;
+}
+
+.cross:before{
+    left: 50%;
+    width: 20%;
+    height: 100%;
+    margin-left: -5px;
+}
+
+.cross:after{
+    top: 50%;
+    width: 100%;
+    height: 20%;
+    margin-top: -5px;
+}
